Make default Bookie scripts work on JDK11+
- detect new Java versions in bin/common.sh
- use different defaults on JDK8 vs JDK11+

Descriptions of the changes in this PR:
Change distribution scripts in order to detect a JDK newer then JDK8 and set default JVM options accordingly.

### Motivation

Because I want that BookKeeper tools run out of the box with JDK11

### Changes
1) detect a JDK newer then JDK8, but checking if exists $JAVA_HOME/bin/jshell (this is quite robust, better then parsing some Java version string)
2) use new defaults for JDK11, in particular do not enable experimental and deprecated options, use the new [Java Unified Logging](https://openjdk.java.net/jeps/158) log system for GC

Please note the output of "Java Unified Logging" is very different from the old pre-Java9 one and 
options are different, there is no simple port.

Master Issue: #1912




Reviewers: Sijie Guo <None>

This closes #2132 from eolivelli/fix/run-jdk11